Button jump fix

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -221,7 +221,6 @@ footer {
     border: none;
     border-radius: 5px;
     transition: 0.3s;
-    animation: bounce 1s;
   }
   img {
     width: 100%;
